# axiom-hive-ddm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FILE_TREE.json  LICENSE  PRINCIPLES.md  QUICKSTART.md  README.md  README_v2.1.0.md  REPOSITORY_SUMMARY.md  SECURITY.md  STRATEGY.md
.github/workflows/: ci.yml
ARTIFACTS/config/: axioms_dns.toml
ARTIFACTS/container/: Dockerfile
ARTIFACTS/daemon/: ddm_daemon.rs
ARTIFACTS/ebpf/: bpf_compat_shim.h  ddm_dns_filter_v2.c
ARTIFACTS/windows/: ddm_wfp.c  wfp_compat_shim.h
VALIDATION/ci/: validation.yml
VALIDATION/schemas/: deployment.schema.json  principles.schema.json  strategy.schema.json
deployable/: Containerfile
diagrams/architecture/: inverted-lagrangian.mmd  system-overview.mmd
diagrams/deployment/: enterprise-deployment.mmd
diagrams/flows/: query-processing.mmd
docs/architecture/: closed-manifold.md  inverted-lagrangian.md  overview.md
docs/implementation/: linux-ebpf.md
docs/operations/: deployment.md  ev-code-signing.md  lab-setup.md  pilot-deployment.md
examples/ebpf/: Makefile  ddm_dns_filter.c  ddm_loader.c  manifold.conf
research/: technical-feasibility.md
scripts/: Setup-VmPool.ps1  build.sh  build_and_deploy.sh  setup-vm-pool.sh
src/core/: mamba_core.py
src/core/toon-rs/: Cargo.toml
src/core/toon-rs/src/: error.rs  lib.rs
src/ddm_core/: Cargo.toml  ddm_server.py  mtc_certificate.json  mtc_generator.py
src/mvc_simple_filter/: ddm_filter.py  manifold.txt
src/risk/: Cargo.toml
src/risk/src/: main.rs
verification/: verification_report.json
(+4 files in other folders)
